--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="mask-icon" href="https://s3.amazonaws.com/thefifthworld/website/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" media="all" href="css/style.css" />
+    <link rel="stylesheet" media="all" href="/css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A design system for the Fifth World." />
   </head>
-  <body>
+  <body class="thefifthworld">
     <main>
       <h1>The Fifth World Design System</h1>
       <p>Lorem ipsum dolor sit amet.</p>
