--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
   <body class="thefifthworld">
     <main>
       <h1>The Fifth World Design System</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet risus at ligula vehicula bibendum. Nam fringilla at nisi in egestas. Donec mi erat, vulputate rhoncus est aliquet, mattis vehicula leo. Vivamus a dui vel lorem sagittis blandit ut porttitor urna. Proin sed accumsan sem. Sed quis ultrices justo. Praesent mattis mattis leo.</p>
-      <p>Proin consequat ac metus nec ultricies. Nam vestibulum non nisi sagittis tincidunt. Quisque venenatis lobortis massa, et euismod neque bibendum et. Fusce enim est, tincidunt id porttitor et, eleifend ac diam. Fusce sit amet mi vitae enim rhoncus posuere ut ut ipsum. Curabitur ut venenatis sapien. Aenean lobortis, enim tincidunt interdum volutpat, magna turpis eleifend enim, quis fermentum lectus lectus feugiat justo. Mauris vehicula semper fringilla. Praesent aliquet ac nisi eu convallis. Proin quis lacinia leo. Morbi sit amet accumsan tortor, in gravida velit. Nulla elementum ornare ligula, a consectetur odio egestas at. Etiam sit amet ligula convallis, iaculis libero sed, semper risus. Nulla facilisi. Integer elit sapien, sollicitudin pellentesque nunc eu, rutrum consectetur enim. Nulla facilisi.</p>
-      <p>Vivamus laoreet finibus ex, eu suscipit lectus pharetra ac. Nullam aliquet justo sit amet tortor euismod ornare. Praesent tincidunt consectetur urna. Vivamus vel elit erat. Quisque sodales consectetur justo in lobortis. Cras commodo nulla porttitor rutrum egestas. Maecenas vulputate vulputate justo, ut condimentum orci maximus consectetur. Nulla condimentum vel erat ut mattis. In ut viverra velit. Donec ut tristique lacus, sit amet sagittis enim. Fusce porta diam neque, at sodales enim venenatis vitae.</p>
-      <p>Ut porta arcu a justo dictum, ac facilisis risus fermentum. Praesent a sagittis ligula, eget consequat dolor. Sed fermentum interdum augue, vitae pellentesque justo scelerisque vitae. Cras vitae purus nibh. Fusce tempor finibus turpis, non semper quam vehicula vel. Morbi vel mattis eros. Sed placerat ipsum turpis, id sodales mauris lacinia eget. Praesent tempus lectus sit amet enim hendrerit, sit amet pharetra magna ullamcorper. In ac elit risus. Donec non malesuada purus. Pellentesque vel lacus eu magna malesuada sagittis.</p>
-      <p>Vivamus consectetur purus hendrerit dui semper, non posuere quam euismod. Ut lobortis tincidunt nunc in interdum. Etiam enim risus, eleifend id nisi aliquam, efficitur scelerisque turpis. Vivamus ipsum purus, imperdiet et magna non, lobortis sagittis nulla. Quisque placerat pretium augue sit amet bibendum. Morbi sagittis in enim sed suscipit. Proin in sodales nisl. Nam feugiat, urna sed consequat commodo, diam augue malesuada enim, at egestas nunc risus quis nunc. Nullam in mauris ornare, pretium elit nec, iaculis ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at lacus vel metus viverra malesuada bibendum efficitur eros. Pellentesque sagittis eu ante ac commodo. Mauris blandit, turpis varius posuere blandit, eros arcu interdum libero, vitae imperdiet libero eros et erat. Etiam in pellentesque nisi. Fusce in purus a purus condimentum semper.</p>
+      <p>The Fifth World presents a vision of a neotribal, ecotopian future. Our imaginations haven't gotten used to a combination like that. The right combination of lines and colors can make us think of Golden Age science fiction or fantasy novels like those of Tolkien, but a new genre requires new approaches to design to effectively set the tone. The Fifth World Design System creates the look-and-feel for the Fifth World &mdash; the official website, and hopefully your own projects as well. It makes it easier to develop our interfaces, makes the sites we develop more cohesive and coherent, and makes it easier to get on the same page when we talk about our work.</p>
+      <a href="instructions.html" class="panel">
+        <h2>Instructions</h2>
+        <p>How-to guides for using the Fifth World Design System in your own projects, as well as how to contribute to it.</p>
+      </a>
+      <a href="principles.html" class="panel">
+        <h2>Design Principles</h2>
+        <p>An introduction to the values, principles, and basic design decisions that drive everything else in this system.</p>
+      </a>
+      <a href="templates.html" class="panel">
+        <h2>Templates</h2>
+        <p>Templates provide the basic structure for a page.</p>
+      </a>
+      <a href="components.html" class="panel">
+        <h2>Components</h2>
+        <p>Our component library lists and documents all of the components in the design system.</p>
+      </a>
     </main>
     <script src="js/bundle.js"></script>
   </body>
