Foundations > Progressive enhancement

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h2>Instructions</h2>
         <p>How-to guides for using the Fifth World Design System in your own projects, as well as how to contribute to it.</p>
       </a>
-      <a href="principles.html" class="panel">
-        <h2>Design Principles</h2>
-        <p>An introduction to the values, principles, and basic design decisions that drive everything else in this system.</p>
+      <a href="foundations.html" class="panel">
+        <h2>Foundations</h2>
+        <p>Elements of design too basic to consider as templates or components, like typography and color.</p>
       </a>
       <a href="templates.html" class="panel">
         <h2>Templates</h2>
