--- a/foundations.html
+++ b/foundations.html
@@ -27,6 +27,88 @@
           <li>Most people will successfully download and execute JavaScript, allowing for client-side enhancements, like drag-and-drop file uploads. JavaScript can fail for a long list of reasons. When this happens, you still get a functional page, because our client-side JavaScript only enhances an existing experience.</li>
         </ul>
       </section>
+      <section id="colors">
+        <h2>Colors</h2>
+        <div class="palettes">
+          <div class="palette red">
+            <h3>Red</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$red</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#b92e52</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>185, 46, 82</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="palette blue">
+            <h3>Blue</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$blue</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#4195c0</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>65, 149, 192</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="palette green">
+            <h3>Green</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$green</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#2eb950</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>46, 185, 80</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="palette yellow">
+            <h3>Yellow</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$yellow</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#c0c041</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>192, 192, 65</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <p>Each of these colors also come in 1/6, 1/3, and 2/3 opacity variations (e.g., <code>$red13</code> gives you <code>$red</code> with 1/3 opacity).</p>
+      </section>
     </main>
   <script src="js/bundle.js"></script>
   </body>
