--- a/foundations.html
+++ b/foundations.html
@@ -109,6 +109,17 @@
         </div>
         <p>Each of these colors also come in 1/6, 1/3, and 2/3 opacity variations (e.g., <code>$red13</code> gives you <code>$red</code> with 1/3 opacity).</p>
       </section>
+      <section id="typography">
+        <h2>Typography</h2>
+        <p>The Fifth World uses <a href="https://www.exljbris.com/">exljbris Font Foundry&rsquo;s</a> <a href="https://www.exljbris.com/fontin.html">Fontin</a> and <a href="https://www.exljbris.com/fontinsans.html">Fontin Sans</a> families. We picked free typefaces to reduce the barriers to entry to begin developing your own Fifth World projects. The tall x-height helps make the type readable, and its humanist balance of curves and straight lines speaks to something authentically human without compromising its sense of the future &mdash; and so helps embody the spirit of neotribalism.</p>
+        <hr />
+        <p class="h1like">Primary heading</p>
+        <p class="h2like">Secondary heading</p>
+        <p class="h3like">Tertiary heading</p>
+        <p class="h4like">Quaternary heading</p>
+        <p class="h5like">Quinary heading</p>
+        <hr />
+      </section>
     </main>
   <script src="js/bundle.js"></script>
   </body>
