Use jump nav on foundations page

--- a/foundations.html
+++ b/foundations.html
@@ -23,6 +23,7 @@
         <li class="current">Foundations</li>
       </ul>
       <h1>Foundations</h1>
+      <div class="jump-to-nav"></div>
       <section id="progressive">
         <h2>Progressive enhancement</h2>
         <p><a href="https://alistapart.com/article/understandingprogressiveenhancement/">Progressive enhancement</a> means starting with the most basic unit possible &mdash; in our case, plain HTML &mdash; and treating everything else as something that might optionally enhance the experience for those who can get it. This way, everything always works, period.</p>
