--- a/components.html
+++ b/components.html
@@ -26,7 +26,7 @@
       <div class="jump-to-nav"></div>
       <section id="link" data-category="HTML Tags">
         <h2>Link</h2>
-        <div class="preview">
+        <div class="preview" style="margin: 2.618em 0; text-align: center;">
           <a href="#">Link</a>
         </div>
         <details>
