Details markup component
Normally this would get its own branch, but that's getting a little meta.

--- a/components.html
+++ b/components.html
@@ -29,7 +29,7 @@
         <div class="preview" style="margin: 2.618em 0; text-align: center;">
           <a href="#">Link</a>
         </div>
-        <details>
+        <details class="markup">
           <summary>Example markup</summary>
           <code class="language-markup">&lt;a href="https://thefifthworld.com"&gt;Link&lt;/a&gt;</code>
         </details>
