Add Prism for syntax highlighting

--- a/components.html
+++ b/components.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" media="all" href="/css/style.css" />
+    <link rel="stylesheet" media="all" href="/css/prism.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A design system for the Fifth World." />
@@ -42,5 +43,6 @@
       </section>
     </main>
     <script src="js/bundle.js"></script>
+    <script src="js/prism.js"></script>
   </body>
 </html>
