How did I forget brown?!?!?

--- a/foundations.html
+++ b/foundations.html
@@ -94,6 +94,25 @@
               </tbody>
             </table>
           </div>
+          <div class="palette brown">
+            <h3>Brown</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$brown</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#5b3822</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>91, 56, 34</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
           <div class="palette yellow">
             <h3>Yellow</h3>
             <table>
