Add a little cleanup around components

--- a/components.html
+++ b/components.html
@@ -25,10 +25,12 @@
       </ul>
       <h1>Components</h1>
       <div class="jump-to-nav"></div>
-      <section id="link" data-category="HTML Tags">
+
+      <!-- Link -->
+      <section id="link" data-category="HTML Tags" class="component">
         <h2>Link</h2>
-        <div class="preview" style="margin: 2.618em 0; text-align: center;">
-          <a href="#">Link</a>
+        <div class="preview small-text">
+          <a href="#link">Link</a>
         </div>
         <details class="markup">
           <summary>Example markup</summary>
@@ -38,6 +40,23 @@
           <ul>
             <li>Use links to <em>go somewhere</em>. Use <a href="#button">buttons</a> to <em>do something</em>.</li>
             <li>Avoid unclear link text like &ldquo;click here&rdquo; or just &ldquo;here.&rdquo; Look for ways to use the link text to describe what the user will find if she clicks on it.</li>
+          </ul>
+        </section>
+      </section>
+
+      <!-- Horizontal rule -->
+      <section id="hr" data-category="HTML Tags" class="component">
+        <h2>Horizontal rule</h2>
+        <div class="preview">
+          <em>It looks just like the bar between each of the components listed here.</em>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;hr /&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use to create a <em>thematic break</em> between paragraphs (e.g., shifting to a new scene in a story or to a new topic within a section).</li>
           </ul>
         </section>
       </section>
