Not using small-text after all

--- a/components.html
+++ b/components.html
@@ -29,7 +29,7 @@
       <!-- Link -->
       <section id="link" data-category="HTML Tags" class="component">
         <h2>Link</h2>
-        <div class="preview small-text">
+        <div class="preview">
           <a href="#link">Link</a>
         </div>
         <details class="markup">
