Move table to HTML Tags
Maybe we'll need a whole separate table category at some point, but for now, we don't, and maybe not ever.

--- a/components.html
+++ b/components.html
@@ -62,8 +62,8 @@
       </section>
 
       <!-- Basic table -->
-      <section id="table" data-category="Tables" class="component">
-        <h2>Basic table</h2>
+      <section id="table" data-category="HTML Tags" class="component">
+        <h2>Table</h2>
         <div class="preview">
           <table>
             <tcaption>Table 1. A limerick</tcaption>
