--- a/components.html
+++ b/components.html
@@ -191,6 +191,29 @@
         </section>
       </section>
 
+      <!-- Panel links -->
+      <section id="panel-links" data-category="Navigation" class="component">
+        <h2>Panel links</h2>
+        <div class="preview">
+          <a href="#panel-links" class="panel">
+            <h2>Components</h2>
+            <p>Our component library lists and documents all of the components in the design system.</p>
+          </a>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;a href="components.html" class="panel"&gt;
+  &lt;h2&gt;Components&lt;/h2&gt;
+  &lt;p&gt;Our component library lists and documents all of the components in the design system.&lt;/p&gt;
+&lt;/a&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this pattern when a page or section focuses primarily on driving a user to a specific link, and that link has both a title and some sort of description to go along with it. This pattern makes the entire block of text interactive.</li>
+          </ul>
+        </section>
+      </section>
+
     </main>
     <script src="js/bundle.js"></script>
     <script src="js/prism.js"></script>
