Apply favicon to existing HTML pages

--- a/foundations.html
+++ b/foundations.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>The Fifth World Design System</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="https://s3.amazonaws.com/thefifthworld/website/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://s3.amazonaws.com/thefifthworld/website/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://s3.amazonaws.com/thefifthworld/website/favicon-16x16.png" />
-    <link rel="manifest" href="https://s3.amazonaws.com/thefifthworld/website/manifest.json" />
-    <link rel="mask-icon" href="https://s3.amazonaws.com/thefifthworld/website/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/img/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="/img/icons/home.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" media="all" href="/css/style.css" />
@@ -145,6 +145,9 @@
         <p class="h4like">Quaternary heading</p>
         <p class="h5like">Quinary heading</p>
         <hr />
+      </section>
+      <section id="iconography">
+        <h2>Iconography</h2>
       </section>
     </main>
   <script src="js/bundle.js"></script>
