--- a/foundations.html
+++ b/foundations.html
@@ -148,6 +148,46 @@
       </section>
       <section id="iconography">
         <h2>Iconography</h2>
+        <p>Designers often overestimate how clearly icons communicate their meaning, causing confusion and frustration, but the Fifth World invites visitors to explore, rather than complete a task, and for that end the hints provided by icons might prove quite useful. We take our icons from the <a href="https://thenounproject.com/">Noun Project&rsquo;s</a> <a href="https://thenounproject.com/christian933/collection/tribal/">Tribal</a> collection, designed by <a href="https://madexmade.com/">Made &times; Made</a>.</p>
+        <table>
+          <tcaption>Icons</tcaption>
+          <thead>
+            <tr>
+              <th class="short">Icon</th>
+              <th>Use</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="short"><img src="/img/icons/home.svg" alt="The Fifth World" /></td>
+              <td>We use this icon primarily for our favicon &mdash; the icon associated with our site in browser bookmarks and other such uses.</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/art.svg" alt="Art" /></td>
+              <td>We use this icon for the art section with the label <em>See</em>. The geometric pattern here evokes a rug or tapestry.</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/games.svg" alt="Games" /></td>
+              <td>We use this icon for the games section with the label <em>Play</em>. We use a fairly obscure referece here to Hadza gambling traditions (they wager arrows, which assign ownership of game animals killed, rather than the hunter who shot it).</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/map.svg" alt="Map" /></td>
+              <td>We use this icon for the map with the label <em>Explore</em>. This representation of a tent could mark a place on a map, but it also speaks to the sort of shelter one might use while exploring.</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/stories.svg" alt="Stories" /></td>
+              <td>We use this icon for the stories section with the label <em>Hear</em>, evoking the tradition of gathering around a fire to hear a story.</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/like.svg" alt="Like" /></td>
+              <td>We use this icon to like pages, evoking the idea of giving someone a feather as a token of appreciation.</td>
+            </tr>
+            <tr>
+              <td class="short"><img src="/img/icons/like-filled.svg" alt="Like" /></td>
+              <td>When you have already liked a page, the icon switches over to this filled variation to visually indicate that.</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
     </main>
   <script src="js/bundle.js"></script>
