--- a/components.html
+++ b/components.html
@@ -164,6 +164,51 @@
         </section>
       </section>
 
+      <!-- Select -->
+      <section id="select" data-category="Form elements" class="component">
+        <h2>Select</h2>
+        <div class="preview">
+          <select>
+            <option>Option A</option>
+            <option>Option B</option>
+            <option>Option C</option>
+            <optgroup label="Group 1">
+              <option>Option D</option>
+              <option>Option E</option>
+              <option>Option F</option>
+            </optgroup>
+            <optgroup label="Group 2">
+              <option>Option G</option>
+              <option>Option H</option>
+              <option>Option I</option>
+            </optgroup>
+          </select>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;select&gt;
+  &lt;option&gt;Option A&lt;/option&gt;
+  &lt;option&gt;Option B&lt;/option&gt;
+  &lt;option&gt;Option C&lt;/option&gt;
+  &lt;optgroup label="Group 1"&gt;
+    &lt;option&gt;Option D&lt;/option&gt;
+    &lt;option&gt;Option E&lt;/option&gt;
+    &lt;option&gt;Option F&lt;/option&gt;
+  &lt;/optgroup&gt;
+  &lt;optgroup label="Group 2"&gt;
+    &lt;option&gt;Option G&lt;/option&gt;
+    &lt;option&gt;Option H&lt;/option&gt;
+    &lt;option&gt;Option I&lt;/option&gt;
+  &lt;/optgroup&gt;
+&lt;/select&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use select when you want a user to choose one option from a list. If she can select multiple options, use a <a href="#checkbox-list">checkbox list</a>.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Breadcrumbs -->
       <section id="breadcrumbs" data-category="Navigation" class="component">
         <h2>Breadcrumbs</h2>
