--- a/components.html
+++ b/components.html
@@ -195,6 +195,34 @@
         </section>
       </section>
 
+      <!-- Input -->
+      <section id="input" data-category="Form elements" class="component">
+        <h2>Input</h2>
+        <div class="preview">
+          <input type="text" placeholder="Text input" />
+          <input type="email" placeholder="Email input" />
+          <input type="password" placeholder="Password input" />
+          <input type="search" placeholder="Search input" />
+          <input type="tel" placeholder="Telephone input" />
+          <input type="url" placeholder="URL input" />
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;input type="text" placeholder="Text input" /&gt;
+&lt;input type="email" placeholder="Email input" /&gt;
+&lt;input type="password" placeholder="Password input" /&gt;
+&lt;input type="search" placeholder="Search input" /&gt;
+&lt;input type="tel" placeholder="Telephone input" /&gt;
+&lt;input type="url" placeholder="URL input" /&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use the most specific input type for the type of data the field collects.</li>
+            <li>If no other type applies, use <code>text</code>.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Select -->
       <section id="select" data-category="Form elements" class="component">
         <h2>Select</h2>
