--- a/components.html
+++ b/components.html
@@ -223,6 +223,23 @@
         </section>
       </section>
 
+      <!-- Textarea -->
+      <section id="textarea" data-category="Form elements" class="component">
+        <h2>Textarea</h2>
+        <div class="preview">
+          <textarea></textarea>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;textarea&gt;&lt;/textarea&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use a textarea anywhere that the user must enter a large amount of text.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Select -->
       <section id="select" data-category="Form elements" class="component">
         <h2>Select</h2>
