--- a/components.html
+++ b/components.html
@@ -44,6 +44,46 @@
         </section>
       </section>
 
+      <!-- Button -->
+      <section id="button" data-category="HTML Tags" class="component">
+        <h2>Button</h2>
+        <div class="preview">
+          <p style="text-align: center;">
+            <button>Regular</button>
+            <a href="#button" class="button">Regular</a>
+            <input type="button" value="Regular" />
+          </p>
+          <p style="text-align: center;">
+            <button class="secondary">Secondary</button>
+            <a href="#button" class="button secondary">Secondary</a>
+            <input type="button" class="secondary" value="Secondary" />
+          </p>
+          <p style="text-align: center;">
+            <button disabled>Disabled</button>
+            <button disabled class="secondary">Disabled</button>
+          </p>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;button&gt;Regular&lt;/button&gt;
+&lt;a href="#button" class="button"&gt;Regular&lt;/a&gt;
+&lt;input type="button" value="Regular" /&gt;
+
+&lt;button class="secondary"&gt;Secondary&lt;/button&gt;
+&lt;a href="#button" class="button secondary"&gt;Secondary&lt;/a&gt;
+&lt;input type="button" class="secondary" value="Secondary" /&gt;
+
+&lt;button disabled&gt;Disabled&lt;/button&gt;
+&lt;button disabled class="secondary"&gt;Disabled&lt;/button&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use <a href="#link">links</a> to <em>go somewhere</em>. Use buttons to <em>do something</em>.</li>
+            <li>Use a <a href="button-list">button list</a> to present a selection of buttons, but never place two regular buttons too close to one another. Decide which commits the <em>primary</em> action we expect a user to need, and make all of the other buttons secondary.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Horizontal rule -->
       <section id="hr" data-category="HTML Tags" class="component">
         <h2>Horizontal rule</h2>
