--- a/components.html
+++ b/components.html
@@ -352,6 +352,31 @@
         </section>
       </section>
 
+      <!-- Button list -->
+      <section id="button-list" data-category="Navigation" class="component">
+        <h2>Button list</h2>
+        <div class="preview">
+          <p class="buttons">
+            <button>Primary Action</button>
+            <button class="secondary">Secondary Action #1</button>
+            <button class="secondary">Secondary Action #2</button>
+          </p>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;p class="buttons"&gt;
+  &lt;button&gt;Primary Action&lt;/button&gt;
+  &lt;button class="secondary"&gt;Secondary Action #1&lt;/button&gt;
+  &lt;button class="secondary"&gt;Secondary Action #2&lt;/button&gt;
+&lt;/p&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this pattern when a page or section focuses primarily on driving a user to a specific link, and that link has both a title and some sort of description to go along with it. This pattern makes the entire block of text interactive.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Panel links -->
       <section id="panel-links" data-category="Navigation" class="component">
         <h2>Panel links</h2>
