Improve documentation for input fields

--- a/components.html
+++ b/components.html
@@ -257,8 +257,7 @@
         </details>
         <section class="notes">
           <ul>
-            <li>Use the most specific input type for the type of data the field collects.</li>
-            <li>If no other type applies, use <code>text</code>.</li>
+            <li>Use the most specific input type for the type of data the field collects. Sometimes this will make no difference (for example, on most desktop browsers, all of these fields may appear the same), but some devices take advantage of this information (for example, phones will often change to a more useful keyboard layout for each of the types used here). If no other type applies, use <code>text</code>.</li>
           </ul>
         </section>
       </section>
