--- a/components.html
+++ b/components.html
@@ -324,6 +324,26 @@
         </section>
       </section>
 
+      <!-- Checkbox -->
+      <section id="checkbox" data-category="Form elements" class="component">
+        <h2>Checkbox</h2>
+        <div class="preview">
+          <input type="checkbox" id="checkbox-example" />
+          <label for="checkbox-example">I agree that the Fifth World is great.</label>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;input type="checkbox" id="checkbox-example" /&gt;
+&lt;label for="checkbox-example"&gt;This is a checkbox.&lt;/label&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use a single checkbox for binary values, like allowing a user to give consent (for signing up for an email list, for example). <strong>Consent only counts when someone gives it freely</strong>, so make sure that users always opt <em>in</em>, rather than having to opt <em>out</em>. Having a consent box checked by default does not count as granting consent. If a user could grant &ldquo;consent&rdquo; without knowing it, then you can&rsquo;t actually call what they&rsquo;ve granted &ldquo;consent.&rdquo;</li>
+            <li>To allow a user to select zero or more options from a list, use a <a href="#checkbox-list">checkbox list</a>.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Breadcrumbs -->
       <section id="breadcrumbs" data-category="Navigation" class="component">
         <h2>Breadcrumbs</h2>
