--- a/components.html
+++ b/components.html
@@ -344,6 +344,49 @@
         </section>
       </section>
 
+      <!-- Checkbox list -->
+      <section id="checkbox-list" data-category="Form elements" class="component">
+        <h2>Checkbox list</h2>
+        <div class="preview">
+          <ul class="checkboxes">
+            <li>
+              <input type="checkbox" id="checkbox-list1" name="checkbox-list" />
+              <label for="checkbox-list1">Option #1</label>
+            </li>
+            <li>
+              <input type="checkbox" id="checkbox-list2" name="checkbox-list" />
+              <label for="checkbox-list2">Option #2</label>
+            </li>
+            <li>
+              <input type="checkbox" id="checkbox-list3" name="checkbox-list" />
+              <label for="checkbox-list3">Option #3</label>
+            </li>
+          </ul>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;ul class="checkboxes"&gt;
+  &lt;li&gt;
+    &lt;input type="checkbox" id="checkbox-list1" name="checkbox-list" /&gt;
+    &lt;label for="checkbox-list1"&gt;Option #1&lt;/label&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;input type="checkbox" id="checkbox-list2" name="checkbox-list" /&gt;
+    &lt;label for="checkbox-list2"&gt;Option #2&lt;/label&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;input type="checkbox" id="checkbox-list3" name="checkbox-list" /&gt;
+    &lt;label for="checkbox-list3"&gt;Option #3&lt;/label&gt;
+  &lt;/li&gt;
+&lt;/ul&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use a checkbox list when a user should select zero or more options from a list. If she should just select one option, use a <a href="#select">select</a> instead.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Breadcrumbs -->
       <section id="breadcrumbs" data-category="Navigation" class="component">
         <h2>Breadcrumbs</h2>
