Add to documentation

--- a/foundations.html
+++ b/foundations.html
@@ -75,6 +75,25 @@
               </tbody>
             </table>
           </div>
+          <div class="palette purple">
+            <h3>Purple</h3>
+            <table>
+              <tbody>
+              <tr>
+                <th>Sass</th>
+                <td>$purple</td>
+              </tr>
+              <tr>
+                <th>Hex</th>
+                <td>#7d6289</td>
+              </tr>
+              <tr>
+                <th>RGB</th>
+                <td>125, 98, 137</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
           <div class="palette green">
             <h3>Green</h3>
             <table>
