Switch to SVG favicon

--- a/foundations.html
+++ b/foundations.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Fifth World Design System</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/img/favicon/site.webmanifest" />
-    <link rel="mask-icon" href="/img/icons/home.svg" color="#5bbad5" />
-    <meta name="theme-color" content="#ffffff" />
-
+    <title>The Fifth World Design System: Foundations</title>
+    <link rel="icon" href="/img/icons/home.svg" />
+    <link rel=”mask-icon” href=”/img/icons/home.svg” color=”#000000" />
+    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/style.css" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="A design system for the Fifth World." />
   </head>
   <body class="thefifthworld">
