Separate favicon and home
The favicon SVG has some styling with a special media query to make its fill white when it's in dark mode, which might not work out so well against the page background.

--- a/components.html
+++ b/components.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>The Fifth World Design System: Components</title>
-    <link rel="icon" href="/img/icons/home.svg" />
-    <link rel=”mask-icon” href=”/img/icons/home.svg” color=”#000000" />
+    <link rel="icon" href="/img/icons/favicon.svg" />
+    <link rel=”mask-icon” href=”/img/icons/favicon.svg” color=”#000000" />
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/style.css" />
 
