Add note about how typography informs design

--- a/foundations.html
+++ b/foundations.html
@@ -155,6 +155,7 @@
       <section id="typography">
         <h2>Typography</h2>
         <p>The Fifth World uses <a href="https://www.exljbris.com/">exljbris Font Foundry&rsquo;s</a> <a href="https://www.exljbris.com/fontin.html">Fontin</a> and <a href="https://www.exljbris.com/fontinsans.html">Fontin Sans</a> families. We picked free typefaces to reduce the barriers to entry to begin developing your own Fifth World projects. The tall x-height helps make the type readable, and its humanist balance of curves and straight lines speaks to something authentically human without compromising its sense of the future &mdash; and so helps embody the spirit of neotribalism.</p>
+        <p>We look to the proportions and characteristics of Fontin to inform other design elements. For example, the dimensions of the rounded corners on <a href="components.html#button">buttons</a>, <a href="components.html#input">input fields</a>, and <a href="components.html#aside">asides</a> come from Fontin&rsquo;s serifs.</p>
         <hr />
         <p class="h1like">Primary heading</p>
         <p class="h2like">Secondary heading</p>
