--- a/components.html
+++ b/components.html
@@ -201,6 +201,31 @@
         </section>
       </section>
 
+      <!-- Aside -->
+      <section id="aside" data-category="HTML Tags" class="component">
+        <h2>Aside</h2>
+        <div class="preview">
+          <aside>
+            <h3>Missing Games</h3>
+            <p>Roleplaying games require significant blocks of time. Even a short game can take as long as watching a movie. Hopefully you find it time well-spent with friends, but that doesn&rsquo;t make it any less significant an investment.</p>
+            <p>To play a Fifth World saga you don&rsquo;t need a group of friends who can commit to perfect attendance. In every game we focus on some members of the family (the characters of the people present), while other members of the family fade into the background. If you can&rsquo;t make it to game night, your character simply joins them as one of the family members that tonight&rsquo;s story doesn&rsquo;t focus on. When you return next time, you can pick right up again without a problem.</p>
+          </aside>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&ltaside&gt;
+  &lth3&gt;Missing Games&lt/h3&gt;
+  &ltp&gt;Roleplaying games require significant blocks&hellip;&lt/p&gt;
+  &ltp&gt;To play a Fifth World saga you don&amp;rsquo;t&hellip;&lt/p&gt;
+&lt/aside&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use an aside for content that relates only indirectly or tangentially to the main content of the page. Sidebars represent perfect examples of asides.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Label -->
       <section id="label" data-category="Form elements" class="component">
         <h2>Label</h2>
