We accidentally removed Prism CSS

--- a/components.html
+++ b/components.html
@@ -6,6 +6,7 @@
     <link rel=”mask-icon” href=”/img/icons/favicon.svg” color=”#000000" />
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/style.css" />
+    <link rel="stylesheet" media="all" href="/css/prism.css" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
