--- a/components.html
+++ b/components.html
@@ -414,16 +414,16 @@
       <section id="input-button" data-category="Form elements" class="component">
         <h2>Input &amp; button</h2>
         <div class="preview">
+          <label for="input-button-example">Search</label>
           <div class="input-button">
-            <label for="input-button-example">Search</label>
             <input type="text" placeholder="Enter search terms" id="input-button-example" />
             <button>Search</button>
           </div>
         </div>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;div class="input-button"&gt;
-  &lt;label for="input-button-example"&gt;Search&lt;/label&gt;
+          <code class="language-markup">&lt;label for="input-button-example"&gt;Search&lt;/label&gt;
+&lt;div class="input-button"&gt;
   &lt;input type="text" placeholder="Enter search terms" id="input-button-example" /&gt;
   &lt;button&gt;Search&lt;/button&gt;
 &lt;/div&gt;</code>
