--- a/templates.html
+++ b/templates.html
@@ -34,6 +34,17 @@
         </details>
       </section>
 
+      <!-- Stack -->
+      <section id="stack">
+        <h2>Stack</h2>
+        <p>We use the stack template for a few important pages, like the homepage. It displays a &ldquo;stack&rdquo; of short sections.</p>
+        <p><a href="templates/stack.html" class="button">Open demo</a></p>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup"></code>
+        </details>
+      </section>
+
     </main>
     <script src="js/bundle.js"></script>
     <script src="js/prism.js"></script>
